--- a/deeplearning/Neural_Networks-Architecture_and_Parameters.ipynb
+++ b/deeplearning/Neural_Networks-Architecture_and_Parameters.ipynb
@@ -61,19 +61,30 @@
     "\n",
     "## What Parameters to look out for?\n",
     "\n",
+    "### Optimizer Parameters\n",
+    "These parameters are related to the optimization and training process of your model\n",
+    "\n",
+    "- Learning rate (very important!)\n",
+    "- Training batch size\n",
+    "- Training epochs (iterations)\n",
+    "- Optimizer\n",
+    "- Momentum\n",
+    "- Weights and biases\n",
+    "\n",
+    "### Model Parameters\n",
+    "These parameters are related to the structure of your model\n",
+    "\n",
     "- How many layers? (depth)  \n",
     "- How many units? (width)  \n",
     "- How are they interconnected? \n",
     "- Dropout\n",
-    "- Weights and biases\n",
     "- Activation function\n",
     "- Loss function\n",
-    "- Learning rate\n",
-    "- Training batch size\n",
-    "- Training epochs \n",
-    "- Momentum\n",
-    "- Optimizer\n",
-    "- Filter size, Pooling (CNNs) \n",
+    "\n",
+    "#### Model-specific Parameters, e.g.:\n",
+    "- Filter size, Pooling (for CNNs) \n",
+    "- RNN Cell time\n",
+    "- Word embedding dimensionality\n",
     "\n",
     "\n",
     "### Finding the ideal architecture & Parameters for a task usually requires a good bit of experimentation!  \n",
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -172,21 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "350.4glorot_uniformzerosrelusigmoid0.0005adambinary_crossentropy64432\n"
+      "200.4glorot_uniformzerosrelusigmoid4adambinary_crossentropy64432\n"
      ]
     }
    ],
    "source": [
     "# Paramters\n",
     "# How many layers? (depth) -- let's start with one\n",
-    "num_units = 35\n",
+    "# With most networks, usually not much value in using more than three layers (exception: Convolutionals)\n",
+    "# Number of units: just 'large enough'. Too many units can lead to overfitting.\n",
+    "num_units = 20\n",
+    "\n",
     "# How are they interconnected? -- Dense 'Feed Forward' network, output = activation(dot(input, kernel) + bias)\n",
     "dropout_rate = 0.4\n",
     "p_kernel_initializer = 'glorot_uniform' # this initializes the weights\n",
@@ -194,13 +208,22 @@
     "p_bias_initializer = 'zeros'\n",
     "activation_function_1 = 'relu'\n",
     "activation_function_output = 'sigmoid'\n",
-    "p_learning_rate = 0.0005\n",
+    "\n",
+    "p_learning_rate = 4\n",
+    "#p_learning_rate = 0.000001\n",
+    "#p_learning_rate = 0.001 # this is often a good default value to start with;\n",
+    "# Learning rate decay can be helpful, too!\n",
+    "\n",
     "p_optimizer_name = 'adam'\n",
     "p_optimizer = optimizers.Adam(lr=p_learning_rate, beta_1=0.9, beta_2=0.999, epsilon=None, decay=0.0001, amsgrad=False)\n",
     "# Momentum - configurable for some optmizers\n",
     "loss_function = 'binary_crossentropy'\n",
+    "\n",
     "p_batch_size = 64\n",
-    "p_epochs = 4\n",
+    "# larger batch sizes are computationally more efficient, but smaller batch sizes often train better\n",
+    "\n",
+    "p_epochs = 4 # early stopping can be used, too\n",
+    "\n",
     "embedding_vector_length = 32\n",
     "\n",
     "concat_params=str(num_units)+str(dropout_rate)+p_kernel_initializer+p_bias_initializer+activation_function_1+activation_function_output+str(p_learning_rate)+p_optimizer_name+loss_function+str(p_batch_size)+str(p_epochs)+str(embedding_vector_length)\n",
@@ -210,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -219,22 +242,22 @@
      "text": [
       "Train on 20000 samples, validate on 5000 samples\n",
       "Epoch 1/4\n",
-      "20000/20000 [==============================] - 2s 97us/step - loss: 0.6282 - acc: 0.6344 - val_loss: 0.4356 - val_acc: 0.8054\n",
+      "20000/20000 [==============================] - 2s 96us/step - loss: 8.0503 - acc: 0.4990 - val_loss: 7.9545 - val_acc: 0.5064\n",
       "Epoch 2/4\n",
-      "20000/20000 [==============================] - 2s 90us/step - loss: 0.3376 - acc: 0.8589 - val_loss: 0.3356 - val_acc: 0.8544\n",
+      "20000/20000 [==============================] - 2s 95us/step - loss: 8.0906 - acc: 0.4980 - val_loss: 7.9545 - val_acc: 0.5064\n",
       "Epoch 3/4\n",
-      "20000/20000 [==============================] - 2s 93us/step - loss: 0.2365 - acc: 0.9077 - val_loss: 0.3349 - val_acc: 0.8550\n",
+      "20000/20000 [==============================] - 2s 95us/step - loss: 8.0665 - acc: 0.4995 - val_loss: 7.9545 - val_acc: 0.5064\n",
       "Epoch 4/4\n",
-      "20000/20000 [==============================] - 2s 96us/step - loss: 0.1708 - acc: 0.9397 - val_loss: 0.3546 - val_acc: 0.8500\n"
+      "20000/20000 [==============================] - 2s 87us/step - loss: 8.0890 - acc: 0.4980 - val_loss: 7.9545 - val_acc: 0.5064\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1818210b70>"
+       "<keras.callbacks.History at 0x18250f3748>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,15 +338,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/heididuchting/anaconda/envs/dlnd/lib/python3.6/site-packages/ipykernel_launcher.py:4: UserWarning: The `dropout` argument is no longer support in `Embedding`. You can apply a `keras.layers.SpatialDropout1D` layer right after the `Embedding` layer to get the same behavior.\n",
-      "  after removing the cwd from sys.path.\n"
+      "/Users/heididuchting/anaconda/envs/dlnd/lib/python3.6/site-packages/ipykernel_launcher.py:7: UserWarning: The `dropout` argument is no longer support in `Embedding`. You can apply a `keras.layers.SpatialDropout1D` layer right after the `Embedding` layer to get the same behavior.\n",
+      "  import sys\n"
      ]
     },
     {
@@ -333,40 +356,43 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_6 (Embedding)      (None, 100, 32)           160000    \n",
+      "embedding_12 (Embedding)     (None, 120, 32)           128000    \n",
       "_________________________________________________________________\n",
-      "lstm_3 (LSTM)                (None, 30)                7560      \n",
+      "lstm_2 (LSTM)                (None, 30)                7560      \n",
       "_________________________________________________________________\n",
-      "dense_9 (Dense)              (None, 1)                 31        \n",
+      "dense_22 (Dense)             (None, 1)                 31        \n",
       "=================================================================\n",
-      "Total params: 167,591\n",
-      "Trainable params: 167,591\n",
+      "Total params: 135,591\n",
+      "Trainable params: 135,591\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n",
       "Train on 25000 samples, validate on 25000 samples\n",
       "Epoch 1/3\n",
-      "25000/25000 [==============================] - 43s 2ms/step - loss: 0.4444 - acc: 0.7816 - val_loss: 0.3724 - val_acc: 0.8388\n",
+      "25000/25000 [==============================] - 102s 4ms/step - loss: 0.4271 - acc: 0.7951 - val_loss: 0.3412 - val_acc: 0.8501\n",
       "Epoch 2/3\n",
-      "25000/25000 [==============================] - 53s 2ms/step - loss: 0.2957 - acc: 0.8774 - val_loss: 0.3820 - val_acc: 0.8398\n",
+      "25000/25000 [==============================] - 105s 4ms/step - loss: 0.2979 - acc: 0.8764 - val_loss: 0.3325 - val_acc: 0.8546\n",
       "Epoch 3/3\n",
-      "25000/25000 [==============================] - 44s 2ms/step - loss: 0.2606 - acc: 0.8948 - val_loss: 0.3449 - val_acc: 0.8487\n",
-      "25000/25000 [==============================] - 12s 493us/step\n"
+      "25000/25000 [==============================] - 117s 5ms/step - loss: 0.2641 - acc: 0.8919 - val_loss: 0.3832 - val_acc: 0.8491\n",
+      "25000/25000 [==============================] - 16s 625us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.34485528638839724, 0.84867999999999999]"
+       "[0.38316090562343597, 0.84911999999999999]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create the model\n",
+    "# Model-Specific Parameter: Cell type; Here, we are using an 'LSTM' layer\n",
+    "\n",
+    "\n",
     "embedding_vecor_length = 32\n",
     "model = models.Sequential()\n",
     "model.add(layers.Embedding(NUM_WORDS, embedding_vecor_length, input_length=MAXLEN, dropout=0.2))\n",
@@ -374,7 +400,7 @@
     "model.add(layers.Dense(1, activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "print(model.summary())\n",
-    "model.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs=3, batch_size=64)\n",
+    "model.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs=3, batch_size=32)\n",
     "\n",
     "\n",
     "model.evaluate(X_test, Y_test)"
@@ -629,7 +655,7 @@
     "\n",
     "- Deep Learning Online Courses (e.g. Coursera, or Udacity)\n",
     "- 'Deep Learning Book' (http://www.deeplearningbook.org/)\n",
-    "- Curated Newsletters (e.g. https://odsc.com/)\n",
+    "- Curated Newsletters (e.g. https://odsc.com/, http://aidl.io/)\n",
     "- Youtube Channels - e.g. Siraj Raval (e.g. https://www.youtube.com/watch?v=vOppzHpvTiQ)"
    ]
   },
